--- a/Web/src/app/components/asset/trending-asset-card/trending-asset-card.component.css
+++ b/Web/src/app/components/asset/trending-asset-card/trending-asset-card.component.css
@@ -81,8 +81,16 @@
     font-weight: 100;
     text-align: center;
     color: #e6e6e6;
-    text-decoration: underline;
     cursor: pointer;
+}
+
+.follow-link.unfollow{
+    color:#5e5e5e
+}
+
+.follow-link span{
+    font-size: 14px;
+    font-weight: 900;
 }
 
 percentage-display{
