--- a/Web/src/app/components/hot-site/hot-site.component.html
+++ b/Web/src/app/components/hot-site/hot-site.component.html
@@ -1,3 +1,36 @@
+<div class="hotsite-header">
+    <div class="global-container header-container" fxLayout="row" fxLayoutAlign="space-between center">
+      <img [src]="getLogoImgUrl()" routerLink="" class="landing-logo" />
+      <div class="hotsite-header-itens" fxLayout="row" fxLayoutAlign="center center">
+        <div>
+          <a class="hotsite-header-item" routerLink="/hotsite" routerLinkActive="active"><span>HOME</span></a>
+        </div>
+        <div>
+          <a class="hotsite-header-item" href="https://auctus.org" target="_blank"><span>ABOUT US</span></a>
+        </div>
+        <div class="be-an-expert" routerLink="/expert" routerLinkActive="active">
+          <a class="hotsite-header-item"><span>BE AN EXPERT</span></a>
+        </div>
+      </div>
+      <div class="hotsite-header-icons" fxLayout="row" fxLayoutAlign="center center">
+        <a href="https://www.facebook.com/AuctusProject/" target="_blank">
+          <div class="social-icon-wrapper">
+            <fa-icon [icon]="['fab','facebook-f']"  fxLayoutAlign="center stretch"></fa-icon>
+          </div>
+        </a>
+        <a href="https://twitter.com/AuctusProject" target="_blank">
+          <div class="social-icon-wrapper">
+            <fa-icon [icon]="['fab','twitter']"  fxLayoutAlign="center stretch"></fa-icon>
+          </div>
+        </a>
+        <a href="https://t.me/AuctusProject" target="_blank">
+          <div class="social-icon-wrapper">
+            <fa-icon [icon]="['fab','telegram-plane']"  fxLayoutAlign="center stretch"></fa-icon>
+          </div>
+        </a>
+      </div>
+    </div>
+</div>
 <div class="global-container">
   <div class="hotsite-title">An investment platform made for the digital age. Follow your favourite expert, recognize trends early, stay in control.</div>
   <img class="hot-site-image" src="./assets/img/Img_Banner.png">
@@ -8,7 +41,10 @@
     <div fxLayout="column" class="early-access-content">
       <div class="early-access-description">An investment platform made for the digital age. Follow your favourite expert, recognize trends early, stay in control.</div>
       <div class="early-access-title">Sign up for early access</div>
-      <inheritance-input #Referral [options]="getEmailInputOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web" ></inheritance-input>
+      <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="20px">
+        <inheritance-input #Referral [options]="getEmailInputOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web" ></inheritance-input>
+        <div class="send-button">Send</div>
+      </div>
     </div>
   </div>
 </div>
@@ -17,24 +53,65 @@
     <div class="early-access-content bottom-description">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
     </div> 
-    <div fxLayout="row" class="itens" fxLayoutGap="50px">
+    <div fxLayout="row" class="itens" fxLayoutGap="50px" fxLayoutAlign="center start" >
       <div fxLayout="column" fxLayoutAlign="center center">
-        <img src="./assets/img/Icon_Graph.png">
+        <div class="icon-wrapper" fxLayoutAlign="center center"><img src="./assets/img/Icon_Graph.png"></div>
         <div class="item-title">Crypto analysts recommendation</div>
-        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua.</div>
+        <div class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua.</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="center center">
-        <img src="./assets/img/Icon_Podium.png">
+        <div class="icon-wrapper" fxLayoutAlign="center center"><img src="./assets/img/Icon_Podium.png"></div>
         <div class="item-title">Transparent and trustful ranking</div>
-        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua.</div>
+        <div class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua.</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="center center">
-        <img src="./assets/img/Icon_Lock.png">
-        <div class="item-title">No spending, no locking</div>
-        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua.</div>
+        <div class="icon-wrapper" fxLayoutAlign="center center"><img src="./assets/img/Icon_Lock.png"></div>
+        <div class="item-title">No spending,<br/>no locking</div>
+        <div class="item-description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua.</div>
       </div>
     </div>
+    <div class="referral-title">
+      REFERRAL PITCH
+    </div>
+    <div class="referral-subtitle">
+      Get free AUC by inviting your friends to Auctus Experts
+    </div>
+    <div class="referral-description">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua.
+    </div>
   </div>
+</div>
+<div class="hotsite-footer">
+  <div class="global-container" fxLayout="column">
+      <div class="separator"></div>
+      <div class="footer-container" fxLayout="row" fxLayoutAlign="space-between stretch">
+        <img [src]="getLogoImgUrl()" routerLink="" class="landing-logo" />
+        <div fxLayout="column" fxHide.lt-sm>
+          <div class="footer-item-title">CONTACT</div>
+          <div class="footer-item"><a href="mailto:contact@auctus.org">contact@auctus.org</a></div>
+        </div>
+        <div fxLayout="column">
+          <div class="footer-item-title" fxHide.lt-sm>SOCIAL</div>
+          <div class="hotsite-footer-icons" fxLayout="row" fxLayoutAlign="center center">
+            <a href="https://www.facebook.com/AuctusProject/" target="_blank">
+              <div class="social-icon-wrapper">
+                <fa-icon [icon]="['fab','facebook-f']"  fxLayoutAlign="center stretch"></fa-icon>
+              </div>
+            </a>
+            <a href="https://twitter.com/AuctusProject" target="_blank">
+              <div class="social-icon-wrapper">
+                <fa-icon [icon]="['fab','twitter']"  fxLayoutAlign="center stretch"></fa-icon>
+              </div>
+            </a>
+            <a href="https://t.me/AuctusProject" target="_blank">
+              <div class="social-icon-wrapper">
+                <fa-icon [icon]="['fab','telegram-plane']"  fxLayoutAlign="center stretch"></fa-icon>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
