--- a/Web/src/app/components/hot-site/hot-site.component.html
+++ b/Web/src/app/components/hot-site/hot-site.component.html
@@ -1,36 +1,4 @@
-<div class="hotsite-header">
-    <div class="global-container header-container" fxLayout="row" fxLayoutAlign="space-between center">
-      <img [src]="getLogoImgUrl()" routerLink="" class="landing-logo" />
-      <div class="hotsite-header-itens" fxLayout="row" fxLayoutAlign="center center">
-        <div>
-          <a class="hotsite-header-item" routerLink="/hotsite" routerLinkActive="active"><span>HOME</span></a>
-        </div>
-        <div>
-          <a class="hotsite-header-item" href="https://auctus.org" target="_blank"><span>ABOUT US</span></a>
-        </div>
-        <div class="be-an-expert" routerLink="/expert" routerLinkActive="active">
-          <a class="hotsite-header-item"><span>BE AN EXPERT</span></a>
-        </div>
-      </div>
-      <div class="hotsite-header-icons" fxLayout="row" fxLayoutAlign="center center">
-        <a href="https://www.facebook.com/AuctusProject/" target="_blank">
-          <div class="social-icon-wrapper">
-            <fa-icon [icon]="['fab','facebook-f']"  fxLayoutAlign="center stretch"></fa-icon>
-          </div>
-        </a>
-        <a href="https://twitter.com/AuctusProject" target="_blank">
-          <div class="social-icon-wrapper">
-            <fa-icon [icon]="['fab','twitter']"  fxLayoutAlign="center stretch"></fa-icon>
-          </div>
-        </a>
-        <a href="https://t.me/AuctusProject" target="_blank">
-          <div class="social-icon-wrapper">
-            <fa-icon [icon]="['fab','telegram-plane']"  fxLayoutAlign="center stretch"></fa-icon>
-          </div>
-        </a>
-      </div>
-    </div>
-</div>
+<hotsite-header></hotsite-header>
 <div class="global-container">
   <div class="hotsite-title">An investment platform made for the digital age. Follow your favourite expert, recognize trends early, stay in control.</div>
   <img class="hot-site-image" src="./assets/img/Img_Banner.png">
@@ -83,35 +51,4 @@
     </div>
   </div>
 </div>
-<div class="hotsite-footer">
-  <div class="global-container" fxLayout="column">
-      <div class="separator"></div>
-      <div class="footer-container" fxLayout="row" fxLayoutAlign="space-between stretch">
-        <img [src]="getLogoImgUrl()" routerLink="" class="landing-logo" />
-        <div fxLayout="column" fxHide.lt-sm>
-          <div class="footer-item-title">CONTACT</div>
-          <div class="footer-item"><a href="mailto:contact@auctus.org">contact@auctus.org</a></div>
-        </div>
-        <div fxLayout="column">
-          <div class="footer-item-title" fxHide.lt-sm>SOCIAL</div>
-          <div class="hotsite-footer-icons" fxLayout="row" fxLayoutAlign="center center">
-            <a href="https://www.facebook.com/AuctusProject/" target="_blank">
-              <div class="social-icon-wrapper">
-                <fa-icon [icon]="['fab','facebook-f']"  fxLayoutAlign="center stretch"></fa-icon>
-              </div>
-            </a>
-            <a href="https://twitter.com/AuctusProject" target="_blank">
-              <div class="social-icon-wrapper">
-                <fa-icon [icon]="['fab','twitter']"  fxLayoutAlign="center stretch"></fa-icon>
-              </div>
-            </a>
-            <a href="https://t.me/AuctusProject" target="_blank">
-              <div class="social-icon-wrapper">
-                <fa-icon [icon]="['fab','telegram-plane']"  fxLayoutAlign="center stretch"></fa-icon>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-</div>
+<hotsite-footer></hotsite-footer>
