--- a/Web/src/app/components/home/home/home.component.html
+++ b/Web/src/app/components/home/home/home.component.html
@@ -1,4 +1,4 @@
-<top-image [subtitle]="getTopText()" [urlImage]="getTopImage()"></top-image>
+<top-image [subtitle]="getTopText1()" [subtitle2]="getTopText2()" [urlImage]="getTopImage()"></top-image>
 <recommendation-box-list></recommendation-box-list>
 <top-experts [resultsLimit]=4 [hideFilters]=true></top-experts>
 <trending-assets class="global-container-min inverted"></trending-assets>
