--- a/Web/src/app/components/util/top-image/top-image.component.html
+++ b/Web/src/app/components/util/top-image/top-image.component.html
@@ -2,7 +2,10 @@
     <img [src]="urlImage" fxHide.xs="true"/>
     <div class="top-platform-text" fxHide.xs="true">
         <h2 *ngIf="title" class="bold">{{title}}</h2>
-        <span *ngIf="subtitle" [style.font-size]="title ? '14px' : '19px'">{{subtitle}}</span>
+        <div *ngIf="subtitle" fxLayout="column" fxLayoutGap="0px" [style.font-size]="title ? '14px' : '19px'">
+            <span>{{subtitle}}</span>
+            <span>{{subtitle2}}</span>
+        </div>
     </div>
     <div class="auctus-blue-bar"></div>
 </div>
