--- a/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
+++ b/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
@@ -1,3 +1,69 @@
-<p>
-  be-an-expert works!
-</p>
+<hotsite-header></hotsite-header>
+<div class="global-container">
+  <div class="expert-section-title">BE AN EXPERT</div>
+  <div class="expert-section-subtitle">Join Auctus Affiliate Program and profit from the world’s first crypto analyst platform.</div>
+</div>
+<div class="itens-section">
+  <div fxLayout.gt-sm="row" fxLayout.lt-md="column">
+    <img ngClass.gt-sm="expert-image" ngClass.lt-md="expert-image-mobile" src="./assets/img/Img_Banner2.png">
+    <div class="global-container">
+      <div class="itens-list" fxFlex.gt-sm="46" fxFlex.lt-md="100" fxFlexOffset.gt-sm="54" fxFlexOffset.lt-md="0">
+        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;A unique game changing product</div>
+        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;Lucrative commissions</div>
+        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;No Joining Fees for Crypto Experts</div>
+        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;Quick and easy way to get started</div>
+      </div>
+    </div>
+  </div>
+  <div class="global-container">
+
+    <div class="expert-section-title">
+        Maximize your profits
+    </div>
+    <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap.gt-sm="40px" fxLayoutGap.lt-md="20px" fxLayoutAlign.gt-sm="center stretch" fxLayoutAlign.lt-md="center center">
+      <div fxLayout="column" fxLayoutAlign="space-around center" >
+        <div class="profit-item-title">Sign up comission</div>
+        <div class="profit-item-description">Give 20%& Get 20% Earn just by growing your user base</div>
+      </div>
+      <div class="separator"></div>
+      <div fxLayout="column" fxLayoutAlign="space-around center" >
+        <div class="profit-item-title">Best Experts of the month</div>
+        <div class="profit-item-description">The expert ranked the highest is rewarded for giving good advice</div>
+      </div>
+      <div class="separator"></div>
+      <div fxLayout="column" fxLayoutAlign="space-around center" >
+        <div class="profit-item-title">Fast-start bonus</div>
+        <div class="profit-item-description">Experts are rewarded for community engagennent</div>
+      </div>
+      <div class="separator"></div>
+      <div fxLayout="column" fxLayoutAlign="space-around center" >
+        <div class="profit-item-title">Top influencers</div>
+        <div class="profit-item-description">Earn more on if you onboard enough users within 30 cloys of your enrollment</div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="sign-up-section">
+  <div class="global-container">
+      <div class="expert-section-title">
+          Sign up for early access
+      </div>
+      <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutAlign.gt-sm="start start" fxLayoutAlign.lt-md="center center" fxLayoutGap.gt-sm="20px" fxLayoutGap.lt-md="4px">
+        <inheritance-input #Name [options]="getNameInputOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web" ></inheritance-input>
+        <inheritance-input #Email [options]="getEmailInputOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web" ></inheritance-input>
+        <inheritance-input #Twitter [options]="getTwitterInputOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web" ></inheritance-input>
+        <div class="column" fxFlex.gt-sm="200px">
+          <div class="send-button">Send</div>
+          <div class="send-button-description">We’ll keep in touch. ipsum dolor sit amet</div>
+        </div>
+      </div>
+  </div>
+</div>
+<!-- <div class="blog-section">
+  <div class="global-container">
+      <div class="expert-section-title">
+          Blog
+      </div>
+  </div>
+</div> -->
+<hotsite-footer></hotsite-footer>
