--- a/Web/src/app/components/hot-site/hotsite-header/hotsite-header.component.html
+++ b/Web/src/app/components/hot-site/hotsite-header/hotsite-header.component.html
@@ -8,7 +8,7 @@
       <div>
         <a class="hotsite-header-item" href="https://auctus.org" target="_blank"><span>ABOUT US</span></a>
       </div>
-      <div class="be-an-expert" routerLink="/expert" routerLinkActive="active">
+      <div class="be-an-expert" routerLink="/beexpert" routerLinkActive="active">
         <a class="hotsite-header-item"><span>BE AN EXPERT</span></a>
       </div>
     </div>
