--- a/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
+++ b/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
@@ -8,10 +8,11 @@
     <img ngClass.gt-sm="expert-image" ngClass.lt-md="expert-image-mobile" src="./assets/img/Img_Banner2.png">
     <div class="global-container">
       <div class="itens-list" fxFlex.gt-sm="46" fxFlex.lt-md="100" fxFlexOffset.gt-sm="54" fxFlexOffset.lt-md="0">
-        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;A unique game changing product</div>
-        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;Lucrative commissions</div>
-        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;No Joining Fees for Crypto Experts</div>
-        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;Quick and easy way to get started</div>
+        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;Become an Expert and monetize your trading know how</div>
+        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;We’ll help build your audience while increasing your reach for monetization</div>
+        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;Lucrative commissions just by giving trading advice</div>
+        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;No Joining fees for Experts</div>
+        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;Quick and easy startup with the largest bonuses for early Experts</div>
       </div>
     </div>
   </div>
@@ -22,23 +23,23 @@
     </div>
     <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap.gt-sm="40px" fxLayoutGap.lt-md="20px" fxLayoutAlign.gt-sm="center stretch" fxLayoutAlign.lt-md="center center">
       <div fxLayout="column" fxLayoutAlign="space-around center" >
-        <div class="profit-item-title">Sign up comission</div>
-        <div class="profit-item-description">Give 20%& Get 20% Earn just by growing your user base</div>
+        <div class="profit-item-title">Sign Up Bonus</div>
+        <div class="profit-item-description">Earn just by growing your user base with a referral code</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="space-around center" >
-        <div class="profit-item-title">Best Experts of the month</div>
-        <div class="profit-item-description">The expert ranked the highest is rewarded for giving good advice</div>
+        <div class="profit-item-title">Top Experts of the Month</div>
+        <div class="profit-item-description">Each month, Experts with the highest ranking are rewarded with AUC tokens and promoted to the entirety of platform users</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="space-around center" >
-        <div class="profit-item-title">Fast-start bonus</div>
-        <div class="profit-item-description">Experts are rewarded for community engagennent</div>
+        <div class="profit-item-title">Fast Start Bonus</div>
+        <div class="profit-item-description">Earn even more just by onboarding enough users within your first 30 days of enrollment</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="space-around center" >
-        <div class="profit-item-title">Top influencers</div>
-        <div class="profit-item-description">Earn more on if you onboard enough users within 30 cloys of your enrollment</div>
+        <div class="profit-item-title">Top Influencers</div>
+        <div class="profit-item-description">Monetize your trading voice just by interacting with your base</div>
       </div>
     </div>
   </div>
@@ -54,7 +55,7 @@
         <inheritance-input #Twitter [options]="getTwitterInputOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web" ></inheritance-input>
         <div class="column" fxFlex.gt-sm="200px">
           <div class="send-button">Send</div>
-          <div class="send-button-description">We’ll keep in touch. ipsum dolor sit amet</div>
+          <div class="send-button-description">Sign up now so you'll be the first to know of new bonuses and additions to the platform!</div>
         </div>
       </div>
   </div>
