--- a/Web/src/app/components/hot-site/hot-site.component.html
+++ b/Web/src/app/components/hot-site/hot-site.component.html
@@ -25,7 +25,7 @@
       <div fxLayout="column" fxLayoutAlign="center center">
         <div class="icon-wrapper" fxLayoutAlign="center center"><img src="./assets/img/Icon_Graph.png"></div>
         <div class="item-title">Crypto Analysts Recommendation</div>
-        <div class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua.</div>
+        <div class="item-description">Recommendations from experts and cryptocurrencies that you are following.</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="center center">
