--- a/Web/src/app/components/account/message-signature/message-signature.component.html
+++ b/Web/src/app/components/account/message-signature/message-signature.component.html
@@ -102,7 +102,7 @@
     </div>
   </div>
   <div class="request-expert" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
-    <span>Do you think you can give expert advise to others,or can refer more users? Apply to become a verified expert and get rewarded with AUC.&nbsp;<a class="link-request" (click)="becomeAdvisor()">Request</a></span>
+    <span>Do you think you can give expert advise to others? Apply to become a verified expert and get rewarded with AUC.&nbsp;<a class="link-request" (click)="becomeAdvisor()">Request</a></span>
   </div>
 </div>
 <advices></advices>
