--- a/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.css
+++ b/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.css
@@ -76,7 +76,8 @@
     color: white;
     text-align: center;
     margin: auto;
-    margin-top: 13px;    
+    margin-top: 13px;
+    cursor: pointer;
 }
 
 .send-button-description{
