--- a/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
+++ b/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
@@ -4,20 +4,19 @@
   <div class="expert-section-subtitle">Join Auctus Affiliate Program and profit from the world’s first crypto analyst platform.</div>
 </div>
 <div class="itens-section">
-  <div fxLayout.gt-sm="row" fxLayout.lt-md="column">
+  <div class="itens-first-section" fxLayout.gt-sm="row" fxLayout.lt-md="column">
     <img ngClass.gt-sm="expert-image" ngClass.lt-md="expert-image-mobile" src="./assets/img/Img_Banner2.png">
     <div class="global-container">
       <div class="itens-list" fxFlex.gt-sm="46" fxFlex.lt-md="100" fxFlexOffset.gt-sm="54" fxFlexOffset.lt-md="0">
-        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;Become an Expert and monetize your trading know how</div>
-        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;We’ll help build your audience while increasing your reach for monetization</div>
-        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;Lucrative commissions just by giving trading advice</div>
-        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;No Joining fees for Experts</div>
-        <div><fa-icon icon="chevron-right" size="xs"></fa-icon>&nbsp;Quick and easy startup with the largest bonuses for early Experts</div>
+        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Become an Expert and monetize your trading know how</span></div>
+        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>We’ll help build your audience while increasing your reach for monetization</span></div>
+        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Lucrative commissions just by giving trading advice</span></div>
+        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>No Joining fees for Experts</span></div>
+        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Quick and easy startup with the largest bonuses for early Experts</span></div>
       </div>
     </div>
   </div>
-  <div class="global-container">
-
+  <div class="global-container maximize-section">
     <div class="expert-section-title">
         Maximize your profits
     </div>
@@ -29,7 +28,7 @@
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="space-around center" >
         <div class="profit-item-title">Top Experts of the Month</div>
-        <div class="profit-item-description">Each month, Experts with the highest ranking are rewarded with AUC tokens and promoted to the entirety of platform users</div>
+        <div class="profit-item-description">Each month, Experts with the highest ranking are rewarded with AUC tokens</div>
       </div>
       <div class="separator"></div>
       <div fxLayout="column" fxLayoutAlign="space-around center" >
