--- a/Web/src/app/components/hot-site/hotsite-header/hotsite-header.component.css
+++ b/Web/src/app/components/hot-site/hotsite-header/hotsite-header.component.css
@@ -1,4 +1,3 @@
-
 .hotsite-header{
     background: white;
     width: 100%;
@@ -73,4 +72,32 @@
 a{
     color: inherit;
     text-decoration: inherit;
+}
+
+@media(max-width: 959px){
+    .hotsite-header{
+        height: 50px;
+    }
+    
+    .header-container{
+        height: 50px;
+        width: 100%;
+        padding-right: 10px;
+    }    
+    
+    .social-icon-wrapper{
+        width: 22px;
+        height: 22px;
+        border-radius: 22px;
+        font-size: 12px;
+    }
+
+    .social-icon-wrapper fa-icon{
+        margin-top:5px;
+        margin-bottom:5px;
+    }
+
+    .landing-logo{
+        height: 27px;
+    }
 }
